tests/ui/borrowck/borrowck-pat-reassign-binding.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/borrowck-pat-reassign-binding.rs:10:11
   |
LL |       Some(ref i) => {
   |            ----- `x` is borrowed here
LL |           // But on this branch, `i` is an outstanding borrow
LL |           x = Some(*i+1);
   |           ^^^^^^^^^^^^^^ `x` is assigned to here but it was already borrowed
LL |           drop(i);
   |                - borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
